chore(doc): regen swagger doc
